[package]
name = "vulkan-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
bytemuck = "1.14.0"
glam = "0.27.0"
winit = "0.30.0"

[dev-dependencies]
serial_test = "3.1"